[gd_scene load_steps=33 format=2]

[ext_resource path="res://src/main/running-frog.gd" type="Script" id=1]
[ext_resource path="res://assets/main/frog-sheet.png" type="Texture" id=2]
[ext_resource path="res://src/main/frog-chase-behavior.gd" type="Script" id=3]
[ext_resource path="res://src/main/frog-dance-behavior.gd" type="Script" id=4]
[ext_resource path="res://src/main/dance-animations.gd" type="Script" id=5]

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 50 ]
}

[sub_resource type="Animation" id=15]
resource_name = "coy1"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 61, 60, 61, 60 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true ]
}

[sub_resource type="Animation" id=20]
resource_name = "coy1"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 61, 60, 61, 60 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, false ]
}

[sub_resource type="Animation" id=16]
resource_name = "coy2"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 62, 63, 60, 63 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true ]
}

[sub_resource type="Animation" id=21]
resource_name = "coy2"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 62, 63, 60, 63 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "hips1"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 51, 49, 51, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Animation" id=22]
resource_name = "hips1"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 51, 49, 51, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}

[sub_resource type="Animation" id=12]
resource_name = "hips2"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 48, 50, 49 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Animation" id=23]
resource_name = "hips2"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 48, 50, 49 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}

[sub_resource type="Animation" id=17]
resource_name = "nip1"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 55, 52, 55 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Animation" id=24]
resource_name = "nip1"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 55, 52, 55 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}

[sub_resource type="Animation" id=18]
resource_name = "nip2"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 53, 55, 55, 53 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="Animation" id=25]
resource_name = "nip2"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 53, 55, 55, 53 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}

[sub_resource type="Animation" id=19]
resource_name = "nip3"
length = 1.656
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621, 0.828, 1.035, 1.242, 1.449 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 52, 55, 54, 55, 52, 55 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621, 0.828, 1.035, 1.242, 1.449 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, false, true, false, true ]
}

[sub_resource type="Animation" id=26]
resource_name = "nip3"
length = 1.656
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621, 0.828, 1.035, 1.242, 1.449 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 52, 55, 54, 55, 52, 55 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621, 0.828, 1.035, 1.242, 1.449 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, true, false, true, false ]
}

[sub_resource type="Animation" id=13]
resource_name = "shuffle1"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 59, 56, 57, 56 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.621 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ Vector2( 15, 0 ) ],
"method": "shimmy"
}, {
"args": [ Vector2( 15, 0 ) ],
"method": "shimmy"
}, {
"args": [ Vector2( 15, 0 ) ],
"method": "shimmy"
}, {
"args": [ Vector2( 15, 0 ) ],
"method": "shimmy"
} ]
}

[sub_resource type="Animation" id=27]
resource_name = "shuffle1"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 59, 56, 57, 56 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.621 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ Vector2( -15, 0 ) ],
"method": "shimmy"
}, {
"args": [ Vector2( -15, 0 ) ],
"method": "shimmy"
}, {
"args": [ Vector2( -15, 0 ) ],
"method": "shimmy"
}, {
"args": [ Vector2( -15, 0 ) ],
"method": "shimmy"
} ]
}

[sub_resource type="Animation" id=14]
resource_name = "shuffle2"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 57, 56 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.621 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ Vector2( 15, 0 ) ],
"method": "shimmy"
}, {
"args": [ Vector2( 15, 0 ) ],
"method": "shimmy"
}, {
"args": [ Vector2( 15, 0 ) ],
"method": "shimmy"
}, {
"args": [ Vector2( 15, 0 ) ],
"method": "shimmy"
} ]
}

[sub_resource type="Animation" id=28]
resource_name = "shuffle2"
length = 0.828
loop = true
step = 0.207
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 57, 56 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.621 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.207, 0.414, 0.621 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ Vector2( -15, 0 ) ],
"method": "shimmy"
}, {
"args": [ Vector2( -15, 0 ) ],
"method": "shimmy"
}, {
"args": [ Vector2( -15, 0 ) ],
"method": "shimmy"
}, {
"args": [ Vector2( -15, 0 ) ],
"method": "shimmy"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "dance"
length = 8.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.66, 3.31, 5.17, 5.38, 5.59, 5.79, 6.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ 0 ],
"method": "perform_dance_move"
}, {
"args": [ 1 ],
"method": "perform_dance_move"
}, {
"args": [ 2 ],
"method": "perform_dance_move"
}, {
"args": [ 3 ],
"method": "perform_dance_move"
}, {
"args": [ 4 ],
"method": "perform_dance_move"
}, {
"args": [ 5 ],
"method": "perform_dance_move"
}, {
"args": [ 6 ],
"method": "perform_dance_move"
}, {
"args": [ 4 ],
"method": "set_state"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "hug"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "run1"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "run2"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "run3"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "stand"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[node name="RunningFrog" type="Sprite"]
scale = Vector2( 0.467, 0.467 )
texture = ExtResource( 2 )
offset = Vector2( 0, -80 )
hframes = 12
vframes = 6
frame = 1
script = ExtResource( 1 )

[node name="ChaseBehavior" type="Node" parent="."]
script = ExtResource( 3 )

[node name="ChaseTimer" type="Timer" parent="ChaseBehavior"]
wait_time = 8.0
one_shot = true

[node name="PanicTimer" type="Timer" parent="ChaseBehavior"]
wait_time = 1.5
one_shot = true

[node name="ThinkTimer" type="Timer" parent="ChaseBehavior"]
wait_time = 0.1

[node name="DanceBehavior" type="Node" parent="."]
script = ExtResource( 4 )

[node name="SyncCheckTimer" type="Timer" parent="DanceBehavior"]
wait_time = 0.25

[node name="ThinkTimer" type="Timer" parent="DanceBehavior"]
wait_time = 0.1

[node name="WaitToDanceTimer" type="Timer" parent="DanceBehavior"]
wait_time = 1.5
one_shot = true

[node name="DanceAnimations" type="AnimationPlayer" parent="DanceBehavior"]
anims/RESET = SubResource( 11 )
anims/coy1 = SubResource( 15 )
anims/coy1_flip = SubResource( 20 )
anims/coy2 = SubResource( 16 )
anims/coy2_flip = SubResource( 21 )
anims/hips1 = SubResource( 8 )
anims/hips1_flip = SubResource( 22 )
anims/hips2 = SubResource( 12 )
anims/hips2_flip = SubResource( 23 )
anims/nip1 = SubResource( 17 )
anims/nip1_flip = SubResource( 24 )
anims/nip2 = SubResource( 18 )
anims/nip2_flip = SubResource( 25 )
anims/nip3 = SubResource( 19 )
anims/nip3_flip = SubResource( 26 )
anims/shuffle1 = SubResource( 13 )
anims/shuffle1_flip = SubResource( 27 )
anims/shuffle2 = SubResource( 14 )
anims/shuffle2_flip = SubResource( 28 )
script = ExtResource( 5 )
dance_names = [ "coy", "hips", "nip", "shuffle" ]
animation_names_by_dance_name = {
"coy": [ "coy1", "coy1_flip", "coy2", "coy2_flip" ],
"hips": [ "hips1", "hips1_flip", "hips2", "hips2_flip" ],
"nip": [ "nip1", "nip1_flip", "nip2", "nip2_flip", "nip3", "nip3_flip" ],
"shuffle": [ "shuffle1", "shuffle1_flip", "shuffle2", "shuffle2_flip" ]
}
frames_by_dance_name = {
"coy": [ 60, 61, 62, 63 ],
"hips": [ 48, 49, 50, 51 ],
"nip": [ 52, 53, 54, 55 ],
"shuffle": [ 56, 57, 58, 59 ]
}

[node name="Choreographer" type="AnimationPlayer" parent="DanceBehavior"]
anims/dance = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "stand"
anims/RESET = SubResource( 3 )
anims/chase = SubResource( 2 )
anims/hug = SubResource( 1 )
anims/run1 = SubResource( 7 )
anims/run2 = SubResource( 6 )
anims/run3 = SubResource( 5 )
anims/stand = SubResource( 4 )

[connection signal="timeout" from="ChaseBehavior/ChaseTimer" to="ChaseBehavior" method="_on_ChaseTimer_timeout"]
[connection signal="timeout" from="ChaseBehavior/PanicTimer" to="ChaseBehavior" method="_on_PanicTimer_timeout"]
[connection signal="timeout" from="ChaseBehavior/ThinkTimer" to="ChaseBehavior" method="_on_ThinkTimer_timeout"]
[connection signal="timeout" from="DanceBehavior/SyncCheckTimer" to="DanceBehavior" method="_on_SyncCheckTimer_timeout"]
[connection signal="timeout" from="DanceBehavior/ThinkTimer" to="DanceBehavior" method="_on_ThinkTimer_timeout"]
[connection signal="timeout" from="DanceBehavior/WaitToDanceTimer" to="DanceBehavior" method="_on_WaitToDanceTimer_timeout"]
